# xdg-desktop-portal-cli

./: .buildconfig  .clang-format  .editorconfig  .gitignore  Makefile  meson.build  org.github.MattSturgeon.PortalWrapper.yml  org.github.MattSturgeon.xdg_desktop_portal_cli.json  org.github.MattSturgeon.xdg_desktop_portal_cli.yml
data/: meson.build  org.github.MattSturgeon.xdg_desktop_portal_cli.gschema.xml
git-hooks/: install-hooks.py  meson.build  pre-commit.hook
include/: dynamic-launcher.h  event-loop.h  line-wrapper.h  xdg-portal.h
include/util/: icon.h  unused.h
po/: POTFILES  meson.build
src/: command.c  command.h  dynamic-launcher.c  dynamic-launcher.h  event-loop.c  event-loop.h  line-wrapper.c  main.c  meson.build  xdg-portal.c  xdg-portal.h
src/dynamic-launcher/: get-icon.c  get.c  install.c  launch.c  meson.build  portal.c  uninstall.c
src/util/: icon.c  meson.build
test/: line-wrapper.c  meson.build
